syntax = "proto3";
package chat;
// start 90001
message C2GIMMessage{
    enum MsgID{
        Zero =0;
        ID= 90001;
    }
    uint64 touser = 1;
    string content =2;
    uint32 channel =3;
}


message G2CIMMessage{
    enum MsgID{
        Zero = 0;
        ID = 90002;
    }
    uint64 from =1;
    string content =2;
    uint32 channel =3;
}
message G2CIMChatResult{
    enum MsgID{
        Zero =0;
        ID =90003;
    }
    string result =1;
}

enum ChatChannel
{
    NOCHANNEL = 0;
    USERCHANNEL = 1;
    WORLDCHANNEL = 2;
    ALLCHANNEL = 0xFF;
}